crates/solidity-v2/testing/snapshots/semantic_output/contracts/storage_layout_constant_number/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: This syntax was introduced in version '0.8.29'.
   ╭─[input.sol:1:12]
   │
 1 │ contract C layout at 0xAAAA {
   │            ────────┬───────  
   │                    ╰───────── Error occurred here.
───╯
------------------------------------------------------------------------

Definitions (1):
- Def: #1 ["C" @ input.sol:1:10] (contract)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract C layout at 0xAAAA {
   │          ┬  
   │          ╰── name: 1
───╯
